--- a/frontend/pulsar_palace/package.json
+++ b/frontend/pulsar_palace/package.json
@@ -16,10 +16,13 @@
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-if": "^4.1.5",
     "react-router-dom": "^6.21.0",
     "swiper": "^11.0.5"
   },
